客户端启动、与服务器建立连接、发送请求